--- a/terminal-jansi/pom.xml
+++ b/terminal-jansi/pom.xml
@@ -24,8 +24,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.fusesource.jansi</groupId>
-            <artifactId>jansi</artifactId>
+            <groupId>org.jline.deps</groupId>
+            <artifactId>jansi-${jansi.version}</artifactId>
         </dependency>
 
         <dependency>
