--- a/deps/pom.xml
+++ b/deps/pom.xml
@@ -19,54 +19,29 @@
         <version>3.2.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>jline-builtins</artifactId>
-    <name>JLine Builtins</name>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.jline</groupId>
-            <artifactId>jline-reader</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jline.deps</groupId>
-            <artifactId>juniversalchardet-${juniversalchardet.version}</artifactId>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>deps</artifactId>
+    <version>3.2.0-SNAPSHOT</version>
+    <name>JLine Dependent Modules</name>
+    <packaging>pom</packaging>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <showWarnings>true</showWarnings>
-                    <fork>true</fork>
-                </configuration>
                 <executions>
                     <execution>
                         <id>default-compile</id>
                         <configuration>
                             <!-- compile everything to ensure module-info contains right entries -->
-                            <excludes>
-                                <exclude>**/TTop.java</exclude>
-                            </excludes>
                             <release>9</release>
                             <source>9</source>
                             <target>9</target>
+                            <showWarnings>false</showWarnings>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
-                                <arg>-Werror</arg>
-                                <arg>-profile</arg>
-                                <arg>compact1</arg>
                             </compilerArgs>
+                            <fork>true</fork>
                         </configuration>
                     </execution>
                     <execution>
@@ -77,41 +52,73 @@
                         <configuration>
                             <excludes>
                                 <exclude>module-info.java</exclude>
-                                <exclude>**/TTop.java</exclude>
                             </excludes>
                             <release>8</release>
                             <source>8</source>
                             <target>8</target>
+                            <showWarnings>false</showWarnings>
                             <compilerArgs>
                                 <arg>-Xlint:all,-options</arg>
-                                <arg>-Werror</arg>
-                                <arg>-profile</arg>
-                                <arg>compact1</arg>
                             </compilerArgs>
+                            <fork>true</fork>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.12</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources</source>
+                            </sources>
                         </configuration>
                     </execution>
                     <execution>
-                        <id>base-compile2</id>
+                        <id>add-resource</id>
+                        <phase>generate-resources</phase>
                         <goals>
-                            <goal>compile</goal>
+                            <goal>add-resource</goal>
                         </goals>
                         <configuration>
-                            <includes>
-                                <include>**/TTop.java</include>
-                            </includes>
-                            <release>8</release>
-                            <source>8</source>
-                            <target>8</target>
-                            <compilerArgs>
-                                <arg>-Xlint:all,-options</arg>
-                                <arg>-Werror</arg>
-                                <arg>-profile</arg>
-                                <arg>compact3</arg>
-                            </compilerArgs>
+                            <resources>
+                                <resource>
+                                    <directory>${project.build.directory}/generated-resources</directory>
+                                </resource>
+                            </resources>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>none</phase>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+
+    <modules>
+        <module>jansi</module>
+        <module>jna</module>
+        <module>juniversalchardet</module>
+        <module>osgi-annotation</module>
+        <module>osgi-core</module>
+        <module>osgi-event</module>
+        <module>gogo-runtime</module>
+        <module>gogo-jline</module>
+    </modules>
+
 </project>
