for now only complain about license headers do not fail; until this can be normalized

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
 jdk:
   - oraclejdk8
 
-install: ./build ci-prepare $MAVEN_OPTIONS
+# FIXME: for now just complain; do not fail as the present license headers have inconsistent date ranges
+install: ./build ci-prepare -Dlicense.failIfMissing=false $MAVEN_OPTIONS
 
 script: ./build ci-build $MAVEN_OPTIONS
