avoid "unary operator expected" errors

--- a/build
+++ b/build
@@ -99,7 +99,7 @@ case "$command" in
     *)
         # attempt to lookup command function
         fn="command_$command"
-        if [ `type -t $fn` = 'function' ]; then
+        if [ "$(type -t $fn)" = 'function' ]; then
           $fn $*
         else
           # give up and complain
