--- a/pom.xml
+++ b/pom.xml
@@ -88,8 +88,6 @@
         <slf4j.version>1.7.21</slf4j.version>
 
         <surefire.argLine/>
-
-        <deployAtEnd>true</deployAtEnd>
     </properties>
 
     <prerequisites>
@@ -213,6 +211,15 @@
 
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                    <configuration>
+                        <deployAtEnd>true</deployAtEnd>
+                    </configuration>
+                </plugin>
+
                 <plugin>
                     <groupId>com.mycila</groupId>
                     <artifactId>license-maven-plugin</artifactId>
