--- a/terminal-jansi/pom.xml
+++ b/terminal-jansi/pom.xml
@@ -48,6 +48,10 @@
                 <configuration>
                     <instructions>
                         <Export-Package>*;-noimport:=true</Export-Package>
+                        <Import-Package>
+                            org.fusesource.jansi;version="[1.12,2)",
+                            org.fusesource.jansi.internal;version="[1.6,2)"
+                        </Import-Package>
                         <Fragment-Host>org.jline.terminal</Fragment-Host>
                     </instructions>
                 </configuration>
