--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <artifactId>jline-parent</artifactId>
     <name>JLine Parent</name>
     <description>JLine</description>
-    <version>3.4.0-SNAPSHOT</version>
+    <version>3.4.0</version>
     <packaging>pom</packaging>
 
     <licenses>
@@ -87,7 +87,7 @@
         <gogo.jline.version>1.0.6</gogo.jline.version>
         <slf4j.version>1.7.21</slf4j.version>
 
-        <surefire.argLine/>
+        <surefire.argLine />
     </properties>
 
     <prerequisites>
