--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2002-2016, the original author or authors.
+    Copyright (c) 2002-2018, the original author or authors.
 
     This software is distributable under the BSD license. See the terms of the
     BSD license in the documentation provided with this software.
@@ -78,7 +78,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <jna.version>4.2.2</jna.version>
-        <jansi.version>1.16</jansi.version>
+        <jansi.version>1.17-SNAPSHOT</jansi.version>
         <juniversalchardet.version>1.0.3</juniversalchardet.version>
         <sshd.version>1.4.0</sshd.version>
         <easymock.version>3.3.1</easymock.version>
