--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <jna.version>4.2.2</jna.version>
-        <jansi.version>1.17-SNAPSHOT</jansi.version>
+        <jansi.version>1.17</jansi.version>
         <juniversalchardet.version>1.0.3</juniversalchardet.version>
         <sshd.version>1.4.0</sshd.version>
         <easymock.version>3.3.1</easymock.version>
