--- a/remote-ssh/pom.xml
+++ b/remote-ssh/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.6.2-SNAPSHOT</version>
+        <version>3.6.2</version>
     </parent>
 
     <artifactId>jline-remote-ssh</artifactId>
