--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,12 @@
 
             <dependency>
                 <groupId>org.jline</groupId>
+                <artifactId>jline-curses</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.jline</groupId>
                 <artifactId>jline-builtins</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -623,6 +629,7 @@
         <module>terminal</module>
         <module>terminal-jna</module>
         <module>terminal-jansi</module>
+        <module>curses</module>
         <module>reader</module>
         <module>builtins</module>
         <module>console</module>
