--- a/jline/pom.xml
+++ b/jline/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.8.2-SNAPSHOT</version>
+        <version>3.8.2</version>
     </parent>
 
     <artifactId>jline</artifactId>
