--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <licenses>
         <license>
             <name>The BSD License</name>
-            <url>http://www.opensource.org/licenses/bsd-license.php</url>
+            <url>https://opensource.org/licenses/BSD-3-Clause</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
