--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,11 @@
         <jna.version>4.2.2</jna.version>
         <jansi.version>1.17.1</jansi.version>
         <juniversalchardet.version>1.0.3</juniversalchardet.version>
-        <sshd.version>1.4.0</sshd.version>
+        <sshd.version>2.1.0</sshd.version>
         <easymock.version>3.3.1</easymock.version>
         <junit.version>4.12</junit.version>
-        <gogo.runtime.version>1.1.0</gogo.runtime.version>
-        <gogo.jline.version>1.1.0</gogo.jline.version>
+        <gogo.runtime.version>1.1.2</gogo.runtime.version>
+        <gogo.jline.version>1.1.4</gogo.jline.version>
         <slf4j.version>1.7.21</slf4j.version>
         <findbugs.version>3.0.2</findbugs.version>
 
@@ -187,6 +187,18 @@
             <dependency>
                 <groupId>org.apache.sshd</groupId>
                 <artifactId>sshd-core</artifactId>
+                <version>${sshd.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.sshd</groupId>
+                <artifactId>sshd-scp</artifactId>
+                <version>${sshd.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.sshd</groupId>
+                <artifactId>sshd-sftp</artifactId>
                 <version>${sshd.version}</version>
             </dependency>
 
