--- a/builtins/pom.xml
+++ b/builtins/pom.xml
@@ -27,6 +27,10 @@
             <groupId>org.jline</groupId>
             <artifactId>jline-reader</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jline</groupId>
+            <artifactId>jline-style</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.googlecode.juniversalchardet</groupId>
