--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
 
             <dependency>
                 <groupId>org.apache.sshd</groupId>
+                <artifactId>sshd-common</artifactId>
+                <version>${sshd.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.sshd</groupId>
                 <artifactId>sshd-core</artifactId>
                 <version>${sshd.version}</version>
             </dependency>
