--- a/terminal-jansi/pom.xml
+++ b/terminal-jansi/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.11.0-SNAPSHOT</version>
+        <version>3.11.0</version>
     </parent>
 
     <artifactId>jline-terminal-jansi</artifactId>
