--- a/builtins/pom.xml
+++ b/builtins/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jline</groupId>
         <artifactId>jline-parent</artifactId>
-        <version>3.11.0</version>
+        <version>3.11.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jline-builtins</artifactId>
